--- a/config/_default/_default/params.toml
+++ b/config/_default/_default/params.toml
@@ -89,7 +89,7 @@ fingerprintAlgorithm = "sha512" # Valid values are "sha512" (default), "sha384",
   showTaxonomies = true
   showAuthorsBadges = true
   showWordCount = false
-  sharingLinks = [ "linkedin", "twitter", "reddit"]
+  #sharingLinks = [ "linkedin", "twitter", "reddit"]
   showZenMode = true
 
 [list]
